--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,8 @@
       "sizes": "256x256",
       "type": "image/png"
     }],
-  "start_url": "/index.html",
+  "start_url": "https://aman02deep.github.io/pwa-sample/",
   "display": "standalone",
   "background_color": "white",
-  "theme_color": "white"
+  "theme_color": "orange"
 }
