--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,5 @@
   "start_url": "https://aman02deep.github.io/pwa-sample/",
   "display": "standalone",
   "background_color": "white",
-  "theme_color": "orange",
-  "gcm_sender_id": "847244712742",
-  "gcm_user_visible_only": true
+  "theme_color": "orange"
 }
