--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,23 @@
   "name": "Ziggo",
   "short_name": "Ziggo",
   "icons": [{
-    "src": "/images/ziggo_logo.png",
+    "src": "/pwa-sample/ziggo_logo.png",
       "sizes": "128x128",
       "type": "image/png"
     }, {
-      "src": "/images/ziggo_logo.png",
+      "src": "/pwa-sample/ziggo_logo.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "/images/ziggo_logo.png",
+      "src": "/pwa-sample/ziggo_logo.png",
       "sizes": "152x152",
       "type": "image/png"
     }, {
-      "src": "/images/ziggo_logo.png",
+      "src": "/pwa-sample/ziggo_logo.png",
       "sizes": "192x192",
       "type": "image/png"
     }, {
-      "src": "/images/ziggo_logo.png",
+      "src": "/pwa-sample/ziggo_logo.png",
       "sizes": "256x256",
       "type": "image/png"
     }],
