--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,6 @@
   "display": "standalone",
   "background_color": "white",
   "theme_color": "orange",
-  "name": "Push Notification",
+  "name": "Ziggo",
   "gcm_sender_id": "1037489805224"
 }
